@@ -1,3 +1,9 @@
+globus-common (15.18-1+gt6.@distro@) @distro@; urgency=low
+
+  * Packaging fixes
+
+ -- Globus Toolkit <support@globus.org>  Wed, 23 Apr 2014 09:44:17 -0400
+
 globus-common (15.17-1+gt6.@distro@) @distro@; urgency=low
 
   * Test fixes
